--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,27 @@
         <artifactId>pdfbox</artifactId>
         <version>3.0.0-RC1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.12.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
+    <dependency>
+        <groupId>org.jetbrains</groupId>
+        <artifactId>annotations</artifactId>
+        <version>16.0.1</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.healthmarketscience.jackcess/jackcess -->
+    <dependency>
+        <groupId>com.healthmarketscience.jackcess</groupId>
+        <artifactId>jackcess</artifactId>
+        <version>4.0.0</version>
+    </dependency>
+
+
 
 </dependencies>
 </project>
